# aeval

./: .clang-format  CMakeLists.txt
cmake/: Catch2Config.cmake
include/ae/: AeValSolver.hpp  ExprSimpl.hpp  MBPUtils.hpp
include/ufo/: Expr.hpp
scripts/: runTests.py  sygusTest.py
src/: common.h
src/ae/: AeValSolver.hpp  BvNormalization.cpp  BvNormalization.hpp  CMakeLists.txt  ExprBvUtils.cpp  ExprBvUtils.hpp  ExprSimpl.hpp  MBPUtils.cpp  MBPUtils.hpp  SMTUtils.hpp
src/sygus/: SyGuSSolver.hpp
src/ufo/: Expr.hpp  ExprBv.hh
src/ufo/Smt/: ZExprConverter.hpp
tests/: CMakeLists.txt  test.cpp
tools/aeval/: AeValSolver.cpp  CMakeLists.txt  MBPUtils.cpp
